--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "author": "Michiko",
   "license": "ISC",
-  "homepage": "https://michi1008/my-portfolio",
+  "homepage": "https://michi1008.github.io/my-portfolio",
   "dependencies": {
     "gh-pages": "^3.2.3",
     "node-sass": "^6.0.0"
